Adjust text formatting in the first few sections

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -15,11 +15,11 @@
    "source": [
     "## Prepared by\n",
     "\n",
-    "Author: Shinin Varongchayakul\n",
+    "**Author:** Shinin Varongchayakul\n",
     "\n",
-    "Date: 07 Apr 2025\n",
+    "**Date:** 07 Apr 2025\n",
     "\n",
-    "Language: R"
+    "**Language:** R"
    ]
   },
   {
@@ -29,9 +29,9 @@
    "source": [
     "## Dataset\n",
     "\n",
-    "Name: IBM HR Analytics Employee Attrition & Performance\n",
+    "**Name:** IBM HR Analytics Employee Attrition & Performance\n",
     "\n",
-    "Source: https://www.kaggle.com/datasets/pavansubhasht/ibm-hr-analytics-attrition-dataset"
+    "**Source:** https://www.kaggle.com/datasets/pavansubhasht/ibm-hr-analytics-attrition-dataset"
    ]
   },
   {
@@ -40,8 +40,9 @@
    "metadata": {},
    "source": [
     "## Business Problem\n",
-    "- A company was experiencing employee attrition, losing key talents, productivity, and employee engagement.\n",
-    "- The company wanted to understand factors related to attrition and how to predict attrition so that they may take steps to prevent their talents from leaving."
+    "- A company is experiencing employee attrition, losing key talents, productivity, and employee engagement.\n",
+    "- The company wants to understand factors related to attrition and how to predict attrition so that they may take steps to prevent their talents from leaving.\n",
+    "- I will use \"IBM HR Analytics Emnployee Attrition & Performance\" dataset from Kaggle to simulate the scenario."
    ]
   },
   {
