--- a/R/employee_productivity/employee_performance_and_productivity_code.ipynb
+++ b/R/employee_productivity/employee_performance_and_productivity_code.ipynb
@@ -62,68 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "c76c1312",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.4     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.7     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.4.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.7     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.2.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.4.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.1.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.3.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.2.0     \n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n",
-      "\n",
-      "Attaching package: 'data.table'\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:lubridate':\n",
-      "\n",
-      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
-      "    yday, year\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:dplyr':\n",
-      "\n",
-      "    between, first, last\n",
-      "\n",
-      "\n",
-      "The following object is masked from 'package:purrr':\n",
-      "\n",
-      "    transpose\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load packages\n",
     "library(tidyverse)\n",
@@ -150,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "ff64d511",
    "metadata": {
     "vscode": {
@@ -168,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "09e03d8a",
    "metadata": {
     "vscode": {
@@ -272,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "15d28733",
    "metadata": {
     "vscode": {
@@ -332,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "id": "bcd722b6",
    "metadata": {
     "vscode": {
@@ -394,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "id": "cbd621d2",
    "metadata": {
     "vscode": {
@@ -455,15 +401,79 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47076865",
+   "id": "4c0df084",
    "metadata": {},
    "source": [
-    "#### 2.2.3 Convert `Hire_Date` to `Date` Type"
+    "#### 2.2.3 Convert `Resigned` to `factor`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
+   "id": "7566e5d2",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100,000\n",
+      "Columns: 19\n",
+      "$ Department                  \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m IT, Finance, Finance, Customer Support, En…\n",
+      "$ Gender                      \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Male, Male, Male, Female, Female, Male, Ma…\n",
+      "$ Age                         \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 55, 29, 55, 48, 36, 43, 37, 55, 55, 45, 52…\n",
+      "$ Job_Title                   \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Specialist, Developer, Specialist, Analyst…\n",
+      "$ Hire_Date                   \u001b[3m\u001b[90m<dttm>\u001b[39m\u001b[23m 2022-01-19 08:03:05, 2024-04-18 08:03:05,…\n",
+      "$ Years_At_Company            \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 2, 0, 8, 7, 3, 8, 1, 9, 1, 7, 4, 9, 5, 9, …\n",
+      "$ Education_Level             \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m High School, High School, High School, Bac…\n",
+      "$ Performance_Score           \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 5, 5, 3, 2, 2, 3, 5, 2, 2, 1, 3, 5, 4, 4, …\n",
+      "$ Monthly_Salary              \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 6750, 7500, 5850, 4800, 4800, 7800, 5250, …\n",
+      "$ Work_Hours_Per_Week         \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 33, 34, 37, 52, 38, 46, 55, 42, 51, 41, 38…\n",
+      "$ Projects_Handled            \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 32, 34, 27, 10, 11, 31, 20, 46, 23, 33, 1,…\n",
+      "$ Overtime_Hours              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 22, 13, 6, 28, 29, 8, 29, 7, 21, 2, 5, 2, …\n",
+      "$ Sick_Days                   \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 2, 14, 3, 12, 13, 0, 2, 8, 14, 6, 0, 13, 1…\n",
+      "$ Remote_Work_Frequency       \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 0, 100, 50, 100, 100, 100, 0, 100, 0, 75, …\n",
+      "$ Team_Size                   \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 14, 12, 10, 10, 15, 15, 16, 7, 1, 4, 4, 5,…\n",
+      "$ Training_Hours              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 66, 61, 1, 0, 9, 95, 27, 64, 0, 53, 90, 88…\n",
+      "$ Promotions                  \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 0, 2, 0, 1, 1, 0, 0, 0, 1, 2, 1, 0, 2, 1, …\n",
+      "$ Employee_Satisfaction_Score \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2.63, 1.72, 3.17, 1.86, 1.25, 2.77, 4.46, …\n",
+      "$ Resigned                    \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m No, No, No, No, No, No, No, No, No, No, No…\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert `Resigned` to factor\n",
+    "prod_cleaned$Resigned <- factor(prod_cleaned$Resigned,\n",
+    "                                levels = c(FALSE, TRUE),\n",
+    "                                labels = c(\"No\", \"Yes\"))\n",
+    "\n",
+    "# Check the result\n",
+    "glimpse(prod_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018d8911",
+   "metadata": {},
+   "source": [
+    "`Resigned` has been successfully convert to `factor`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47076865",
+   "metadata": {},
+   "source": [
+    "#### 2.2.4 Convert `Hire_Date` to `Date` Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "id": "8462fa42",
    "metadata": {
     "vscode": {
@@ -495,7 +505,7 @@
       "$ Training_Hours              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 66, 61, 1, 0, 9, 95, 27, 64, 0, 53, 90, 88…\n",
       "$ Promotions                  \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 0, 2, 0, 1, 1, 0, 0, 0, 1, 2, 1, 0, 2, 1, …\n",
       "$ Employee_Satisfaction_Score \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2.63, 1.72, 3.17, 1.86, 1.25, 2.77, 4.46, …\n",
-      "$ Resigned                    \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, …\n"
+      "$ Resigned                    \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m No, No, No, No, No, No, No, No, No, No, No…\n"
      ]
     }
    ],
@@ -520,12 +530,12 @@
    "id": "22ca1e0b",
    "metadata": {},
    "source": [
-    "#### 2.2.4 Update `Years_At_Company`"
+    "#### 2.2.5 Update `Years_At_Company`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "id": "4fb36769",
    "metadata": {
     "vscode": {
@@ -557,7 +567,7 @@
       "$ Training_Hours              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 66, 61, 1, 0, 9, 95, 27, 64, 0, 53, 90, 88…\n",
       "$ Promotions                  \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 0, 2, 0, 1, 1, 0, 0, 0, 1, 2, 1, 0, 2, 1, …\n",
       "$ Employee_Satisfaction_Score \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2.63, 1.72, 3.17, 1.86, 1.25, 2.77, 4.46, …\n",
-      "$ Resigned                    \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, …\n"
+      "$ Resigned                    \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m No, No, No, No, No, No, No, No, No, No, No…\n"
      ]
     }
    ],
@@ -602,6 +612,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f204bee0",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create a copy of the dataset for EDA\n",
+    "prod_eda <- copy(prod_cleaned) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fb25bbce",
    "metadata": {},
@@ -611,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "id": "bdd58a4a",
    "metadata": {
     "vscode": {
@@ -694,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "ae61a100",
    "metadata": {
     "vscode": {
@@ -763,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "id": "0309ea3b",
    "metadata": {
     "vscode": {
@@ -825,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "0aadf6fa",
    "metadata": {
     "vscode": {
@@ -930,7 +955,8 @@
     "1. Department\n",
     "2. Team size\n",
     "3. Job title\n",
-    "4. Hire date"
+    "4. Hire date\n",
+    "5. Resgination status"
    ]
   },
   {
@@ -943,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "id": "0fc2e276",
    "metadata": {
     "vscode": {
@@ -1050,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "id": "32181fbf",
    "metadata": {
     "vscode": {
@@ -1199,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "id": "90125341",
    "metadata": {
     "vscode": {
@@ -1298,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "id": "d3716e77",
    "metadata": {
     "vscode": {
@@ -1314,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "id": "c7d6aca3",
    "metadata": {
     "vscode": {
@@ -1415,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "id": "fc34fbc6",
    "metadata": {
     "vscode": {
@@ -1478,14 +1504,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "5f2878e4",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 12 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Hire_Month_Name</th><th scope=col>Avg_Hires</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1 </td><td>840.6000</td></tr>\n",
+       "\t<tr><td>2 </td><td>781.5000</td></tr>\n",
+       "\t<tr><td>3 </td><td>840.2000</td></tr>\n",
+       "\t<tr><td>4 </td><td>816.7000</td></tr>\n",
+       "\t<tr><td>5 </td><td>849.0000</td></tr>\n",
+       "\t<tr><td>6 </td><td>825.4000</td></tr>\n",
+       "\t<tr><td>7 </td><td>847.7000</td></tr>\n",
+       "\t<tr><td>8 </td><td>844.5000</td></tr>\n",
+       "\t<tr><td>9 </td><td>754.5455</td></tr>\n",
+       "\t<tr><td>10</td><td>866.2000</td></tr>\n",
+       "\t<tr><td>11</td><td>814.0000</td></tr>\n",
+       "\t<tr><td>12</td><td>844.2000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 12 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " Hire\\_Month\\_Name & Avg\\_Hires\\\\\n",
+       " <fct> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1  & 840.6000\\\\\n",
+       "\t 2  & 781.5000\\\\\n",
+       "\t 3  & 840.2000\\\\\n",
+       "\t 4  & 816.7000\\\\\n",
+       "\t 5  & 849.0000\\\\\n",
+       "\t 6  & 825.4000\\\\\n",
+       "\t 7  & 847.7000\\\\\n",
+       "\t 8  & 844.5000\\\\\n",
+       "\t 9  & 754.5455\\\\\n",
+       "\t 10 & 866.2000\\\\\n",
+       "\t 11 & 814.0000\\\\\n",
+       "\t 12 & 844.2000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 12 × 2\n",
+       "\n",
+       "| Hire_Month_Name &lt;fct&gt; | Avg_Hires &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 1  | 840.6000 |\n",
+       "| 2  | 781.5000 |\n",
+       "| 3  | 840.2000 |\n",
+       "| 4  | 816.7000 |\n",
+       "| 5  | 849.0000 |\n",
+       "| 6  | 825.4000 |\n",
+       "| 7  | 847.7000 |\n",
+       "| 8  | 844.5000 |\n",
+       "| 9  | 754.5455 |\n",
+       "| 10 | 866.2000 |\n",
+       "| 11 | 814.0000 |\n",
+       "| 12 | 844.2000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   Hire_Month_Name Avg_Hires\n",
+       "1  1               840.6000 \n",
+       "2  2               781.5000 \n",
+       "3  3               840.2000 \n",
+       "4  4               816.7000 \n",
+       "5  5               849.0000 \n",
+       "6  6               825.4000 \n",
+       "7  7               847.7000 \n",
+       "8  8               844.5000 \n",
+       "9  9               754.5455 \n",
+       "10 10              866.2000 \n",
+       "11 11              814.0000 \n",
+       "12 12              844.2000 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Compute the average number of hires by month\n",
     "hires_by_month <- prod_eda[,\n",
@@ -1499,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "id": "e23b99ff",
    "metadata": {
     "vscode": {
@@ -1553,6 +1664,85 @@
     "Feburary and September have the lowest average number of hires.\n",
     "\n",
     "The other months have on average over 800 hires."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63b989e7",
+   "metadata": {},
+   "source": [
+    "### 4.3 Resignation Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "11073d1e",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 2 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resigned</th><th scope=col>Count</th><th scope=col>Percent</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>No </td><td>89990</td><td>89.99</td></tr>\n",
+       "\t<tr><td>Yes</td><td>10010</td><td>10.01</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 2 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " Resigned & Count & Percent\\\\\n",
+       " <fct> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t No  & 89990 & 89.99\\\\\n",
+       "\t Yes & 10010 & 10.01\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 2 × 3\n",
+       "\n",
+       "| Resigned &lt;fct&gt; | Count &lt;int&gt; | Percent &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| No  | 89990 | 89.99 |\n",
+       "| Yes | 10010 | 10.01 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Resigned Count Percent\n",
+       "1 No       89990 89.99  \n",
+       "2 Yes      10010 10.01  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Compute the number of employees by resignation status\n",
+    "prod_eda[,\n",
+    "         .(Count = .N,\n",
+    "             Percent = .N / nrow(prod_eda) * 100),\n",
+    "         by = Resigned]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7bfe529",
+   "metadata": {},
+   "source": [
+    "The majority of the employees (around 90%) are still working for the company."
    ]
   }
  ],
