Adjust heading levels

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -74,7 +74,7 @@
    "id": "d4658635",
    "metadata": {},
    "source": [
-    "## 1. Install & Load Necessary Packages"
+    "# 1. Install & Load Necessary Packages"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "id": "8f19d5dc",
    "metadata": {},
    "source": [
-    "## 2. Prepare the Dataset"
+    "# 2. Prepare the Dataset"
    ]
   },
   {
