Add blocks for EDA part 3

--- a/R/employee_productivity/employee_performance_and_productivity_code.ipynb
+++ b/R/employee_productivity/employee_performance_and_productivity_code.ipynb
@@ -1744,6 +1744,211 @@
    "source": [
     "The majority of the employees (around 90%) are still working for the company."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1c007a8",
+   "metadata": {},
+   "source": [
+    "## 5. EDA, Part 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01bbc26e",
+   "metadata": {},
+   "source": [
+    "In this section, I will explore the variables related to performance and engagement:\n",
+    "1. Performance score\n",
+    "2. Monthly salary\n",
+    "3. Promotions\n",
+    "4. Projects handled\n",
+    "5. Work hours per week\n",
+    "6. Overtime hours\n",
+    "7. Sick days\n",
+    "8. Training hours\n",
+    "9. Satisfaction scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5601a1ef",
+   "metadata": {},
+   "source": [
+    "### 5.1 Performance Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fcc740e",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8ee4aa3",
+   "metadata": {},
+   "source": [
+    "### 5.2 Monthly Salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d89b280",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a90c3ab4",
+   "metadata": {},
+   "source": [
+    "### 5.3 Promotions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2ab60e7",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d18bf54e",
+   "metadata": {},
+   "source": [
+    "### 5.4 Projects Handled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "723a8728",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f1a5641",
+   "metadata": {},
+   "source": [
+    "### 5.5 Work Hours Per Week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e11ba9eb",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "904070aa",
+   "metadata": {},
+   "source": [
+    "### 5.6 Overtime Hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "289d9a4c",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cf7cf79",
+   "metadata": {},
+   "source": [
+    "### 5.7 Sick Days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6fed285",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a71a451",
+   "metadata": {},
+   "source": [
+    "### 5.8 Training Hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7203d439",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c78902c5",
+   "metadata": {},
+   "source": [
+    "### 5.9 Satisfaction Scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ef52dea",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
