--- a/R/employee_productivity/employee_performance_and_productivity_code.ipynb
+++ b/R/employee_productivity/employee_performance_and_productivity_code.ipynb
@@ -597,7 +597,7 @@
    "id": "084da704",
    "metadata": {},
    "source": [
-    "## 3. EDA, Part 1"
+    "## 3. EDA, Part 1 – Demopgrahic Variables"
    ]
   },
   {
@@ -943,7 +943,7 @@
    "id": "f8d23d2a",
    "metadata": {},
    "source": [
-    "## 4. EDA, Part 2"
+    "## 4. EDA, Part 2 – Job-Related Variables"
    ]
   },
   {
@@ -1750,7 +1750,7 @@
    "id": "e1c007a8",
    "metadata": {},
    "source": [
-    "## 5. EDA, Part 3"
+    "## 5. EDA, Part 3 – Performance & Engagement"
    ]
   },
   {
@@ -1767,7 +1767,8 @@
     "6. Overtime hours\n",
     "7. Sick days\n",
     "8. Training hours\n",
-    "9. Satisfaction scores"
+    "9. Remote work frequency\n",
+    "10. Satisfaction scores"
    ]
   },
   {
@@ -1932,10 +1933,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73373188",
+   "metadata": {},
+   "source": [
+    "### 5.9 Remote Work Frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca60e008",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c78902c5",
    "metadata": {},
    "source": [
-    "### 5.9 Satisfaction Scores"
+    "### 5.10 Satisfaction Scores"
    ]
   },
   {
@@ -1949,6 +1970,36 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16b1339c",
+   "metadata": {},
+   "source": [
+    "## 6. EDA, Part 4 – Potential Predictors of Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f388d5ec",
+   "metadata": {},
+   "source": [
+    "In this section, I will explore potential predictors of performance:\n",
+    "1. Work hours\n",
+    "2. Overtime hours\n",
+    "3. Sick days\n",
+    "\n",
+    "4. Remote work frequency\n",
+    "5. Team size\n",
+    "\n",
+    "6. Education level\n",
+    "7. Training hours\n",
+    "8. Project handled\n",
+    "9. Years at company\n",
+    "\n",
+    "9. Age\n",
+    "10. Monthly salary"
+   ]
   }
  ],
  "metadata": {
