Fix comment error in markdown block below cell 32

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -1931,7 +1931,7 @@
    "id": "276c86bb",
    "metadata": {},
    "source": [
-    "I will choose the best combination of hyperparameters based on accuracy, as we are working with an imbalanced dataset, where correctly identifying the positive class is more important than avoiding false positives."
+    "I will choose the best combination of hyperparameters based on recall, as we are working with an imbalanced dataset, where correctly identifying the positive class is more important than avoiding false positives."
    ]
   },
   {
