--- a/R/employee_productivity/employee_performance_and_productivity_code.ipynb
+++ b/R/employee_productivity/employee_performance_and_productivity_code.ipynb
@@ -5,7 +5,7 @@
    "id": "ec3054a3",
    "metadata": {},
    "source": [
-    "# Exploring & Predicting Employee Productivity With Machine Learning"
+    "# Identifying High-Performing Employees Using Machine Learning in R"
    ]
   },
   {
@@ -36,6 +36,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4b03811",
+   "metadata": {},
+   "source": [
+    "## Business Problems\n",
+    "- A large company aims to implement a more effective talent management strategy.\n",
+    "- They want to identify high performers early in their careers to fast-track them for promotions or leadership roles.\n",
+    "- Additionally, they hope to retain these employees through targeted engagement and rewards.\n",
+    "- To support this initiative, I was contacted to analyze HR data and help the company gain insights into their top-performing employees."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "824a5794",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "The goal of the present analysis is threefold:\n",
+    "1. Explore the relationship between employee and job-related characteristics and performance.\n",
+    "2. Build a predictive model to identify high-performing employees.\n",
+    "3. Provide business recommendations based on the results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a6e005f",
    "metadata": {},
    "source": [
@@ -44,14 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fe15e050",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'tidyverse' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'tidymodels' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'data.table' is in use and will not be installed\"\n",
+      "Warning message:\n",
+      "\"package 'dtplyr' is in use and will not be installed\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Install packages\n",
     "install.packages(\"tidyverse\") # data manipulation\n",
@@ -62,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "c76c1312",
    "metadata": {
     "vscode": {
@@ -96,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "ff64d511",
    "metadata": {
     "vscode": {
@@ -114,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "09e03d8a",
    "metadata": {
     "vscode": {
@@ -218,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "15d28733",
    "metadata": {
     "vscode": {
@@ -278,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "bcd722b6",
    "metadata": {
     "vscode": {
@@ -340,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "cbd621d2",
    "metadata": {
     "vscode": {
@@ -409,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "7566e5d2",
    "metadata": {
     "vscode": {
@@ -473,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "id": "8462fa42",
    "metadata": {
     "vscode": {
@@ -535,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "id": "4fb36769",
    "metadata": {
     "vscode": {
@@ -594,10 +633,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec87f4d3",
+   "metadata": {},
+   "source": [
+    "#### 2.2.6 Create the `High_Performer` Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1c9957d2",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 100,000\n",
+      "Columns: 20\n",
+      "$ Department                  \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m IT, Finance, Finance, Customer Support, En…\n",
+      "$ Gender                      \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Male, Male, Male, Female, Female, Male, Ma…\n",
+      "$ Age                         \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 55, 29, 55, 48, 36, 43, 37, 55, 55, 45, 52…\n",
+      "$ Job_Title                   \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Specialist, Developer, Specialist, Analyst…\n",
+      "$ Hire_Date                   \u001b[3m\u001b[90m<date>\u001b[39m\u001b[23m 2022-01-19, 2024-04-18, 2015-10-26, 2016-…\n",
+      "$ Years_At_Company            \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 3, 1, 10, 9, 4, 9, 2, 11, 2, 9, 6, 10, 6, …\n",
+      "$ Education_Level             \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m High School, High School, High School, Bac…\n",
+      "$ Performance_Score           \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 5, 5, 3, 2, 2, 3, 5, 2, 2, 1, 3, 5, 4, 4, …\n",
+      "$ Monthly_Salary              \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 6750, 7500, 5850, 4800, 4800, 7800, 5250, …\n",
+      "$ Work_Hours_Per_Week         \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 33, 34, 37, 52, 38, 46, 55, 42, 51, 41, 38…\n",
+      "$ Projects_Handled            \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 32, 34, 27, 10, 11, 31, 20, 46, 23, 33, 1,…\n",
+      "$ Overtime_Hours              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 22, 13, 6, 28, 29, 8, 29, 7, 21, 2, 5, 2, …\n",
+      "$ Sick_Days                   \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 2, 14, 3, 12, 13, 0, 2, 8, 14, 6, 0, 13, 1…\n",
+      "$ Remote_Work_Frequency       \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 0, 100, 50, 100, 100, 100, 0, 100, 0, 75, …\n",
+      "$ Team_Size                   \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 14, 12, 10, 10, 15, 15, 16, 7, 1, 4, 4, 5,…\n",
+      "$ Training_Hours              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 66, 61, 1, 0, 9, 95, 27, 64, 0, 53, 90, 88…\n",
+      "$ Promotions                  \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 0, 2, 0, 1, 1, 0, 0, 0, 1, 2, 1, 0, 2, 1, …\n",
+      "$ Employee_Satisfaction_Score \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2.63, 1.72, 3.17, 1.86, 1.25, 2.77, 4.46, …\n",
+      "$ Resigned                    \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m No, No, No, No, No, No, No, No, No, No, No…\n",
+      "$ High_Performer              \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Yes, Yes, No, No, No, No, Yes, No, No, No,…\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create `High_Performer` column\n",
+    "prod_cleaned[, High_Performer := factor(ifelse(Performance_Score >= 4, \"Yes\", \"No\"), levels = c(\"Yes\", \"No\"))]\n",
+    "\n",
+    "## Check the result\n",
+    "glimpse(prod_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26bb1ddb",
+   "metadata": {},
+   "source": [
+    " `High_Performer` column has been successfully created."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "084da704",
    "metadata": {},
    "source": [
-    "## 3. EDA, Part 1 – Demopgrahic Variables"
+    "## 3. EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c32ba116",
+   "metadata": {},
+   "source": [
+    "### 3.1 Demopgrahic Variables"
    ]
   },
   {
@@ -613,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "f204bee0",
    "metadata": {
     "vscode": {
@@ -631,12 +741,12 @@
    "id": "fb25bbce",
    "metadata": {},
    "source": [
-    "### 3.1 Gender"
+    "#### 3.1.1 Gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "bdd58a4a",
    "metadata": {
     "vscode": {
@@ -714,12 +824,12 @@
    "id": "5e5470d1",
    "metadata": {},
    "source": [
-    "### 3.2 Age"
+    "#### 3.1.2 Age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "id": "ae61a100",
    "metadata": {
     "vscode": {
@@ -788,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "id": "0309ea3b",
    "metadata": {
     "vscode": {
@@ -845,12 +955,12 @@
    "id": "bda15aee",
    "metadata": {},
    "source": [
-    "### 3.3 Education Level"
+    "#### 3.1.3 Education Level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "id": "0aadf6fa",
    "metadata": {
     "vscode": {
@@ -943,7 +1053,7 @@
    "id": "f8d23d2a",
    "metadata": {},
    "source": [
-    "## 4. EDA, Part 2 – Job-Related Variables"
+    "### 3.2 Job-Related Variables"
    ]
   },
   {
@@ -956,7 +1066,9 @@
     "2. Team size\n",
     "3. Job title\n",
     "4. Hire date\n",
-    "5. Resgination status"
+    "5. Years at company\n",
+    "6. Resignation status\n",
+    "7. Remote work frequency"
    ]
   },
   {
@@ -964,12 +1076,12 @@
    "id": "c33aa53f",
    "metadata": {},
    "source": [
-    "### 4.1 Department"
+    "#### 3.2.1 Department"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "0fc2e276",
    "metadata": {
     "vscode": {
@@ -1071,12 +1183,12 @@
    "id": "8f68aac7",
    "metadata": {},
    "source": [
-    "### 4.2 Team Size"
+    "#### 3.2.2 Team Size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "32181fbf",
    "metadata": {
     "vscode": {
@@ -1220,12 +1332,12 @@
    "id": "8ee17757",
    "metadata": {},
    "source": [
-    "### 4.3 Job Title"
+    "#### 3.2.3 Job Title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "90125341",
    "metadata": {
     "vscode": {
@@ -1319,12 +1431,12 @@
    "id": "9d113183",
    "metadata": {},
    "source": [
-    "### 4.4 Hire Date"
+    "#### 3.2.4 Hire Date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "d3716e77",
    "metadata": {
     "vscode": {
@@ -1340,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "id": "c7d6aca3",
    "metadata": {
     "vscode": {
@@ -1441,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "id": "fc34fbc6",
    "metadata": {
     "vscode": {
@@ -1504,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "id": "5f2878e4",
    "metadata": {
     "vscode": {
@@ -1610,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "id": "e23b99ff",
    "metadata": {
     "vscode": {
@@ -1668,15 +1780,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b989e7",
+   "id": "be981db1",
    "metadata": {},
    "source": [
-    "### 4.3 Resignation Status"
+    "#### 3.2.5 Years at Company"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
+   "id": "3b282742",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02c782f6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63b989e7",
+   "metadata": {},
+   "source": [
+    "#### 3.2.6 Resignation Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "11073d1e",
    "metadata": {
     "vscode": {
@@ -1747,10 +1885,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f535cf5d",
+   "metadata": {},
+   "source": [
+    "#### 3.2.7 Remote Work Frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00345d5e",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "e1c007a8",
    "metadata": {},
    "source": [
-    "## 5. EDA, Part 3 – Performance & Engagement"
+    "### 3.3 Indicators of Performance"
    ]
   },
   {
@@ -1758,17 +1916,11 @@
    "id": "01bbc26e",
    "metadata": {},
    "source": [
-    "In this section, I will explore the variables related to performance and engagement:\n",
+    "In this section, I will explore the indicators of job performance:\n",
     "1. Performance score\n",
     "2. Monthly salary\n",
     "3. Promotions\n",
-    "4. Projects handled\n",
-    "5. Work hours per week\n",
-    "6. Overtime hours\n",
-    "7. Sick days\n",
-    "8. Training hours\n",
-    "9. Remote work frequency\n",
-    "10. Satisfaction scores"
+    "4. Projects handled"
    ]
   },
   {
@@ -1776,7 +1928,7 @@
    "id": "5601a1ef",
    "metadata": {},
    "source": [
-    "### 5.1 Performance Score"
+    "#### 3.3.1 Performance Score"
    ]
   },
   {
@@ -1796,7 +1948,7 @@
    "id": "f8ee4aa3",
    "metadata": {},
    "source": [
-    "### 5.2 Monthly Salary"
+    "#### 3.3.2 Monthly Salary"
    ]
   },
   {
@@ -1816,7 +1968,7 @@
    "id": "a90c3ab4",
    "metadata": {},
    "source": [
-    "### 5.3 Promotions"
+    "#### 3.3.3 Promotions"
    ]
   },
   {
@@ -1833,10 +1985,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b038708c",
+   "metadata": {},
+   "source": [
+    "#### 3.3.4 Projects Handled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8495ffbb",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "d18bf54e",
    "metadata": {},
    "source": [
-    "### 5.4 Projects Handled"
+    "### 3.4 Performance Correlates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c94252cb",
+   "metadata": {},
+   "source": [
+    "In this section, I will explore the potential correlates of job performance:\n",
+    "1. Work hours per week\n",
+    "2. Overtime hours\n",
+    "3. Sick days\n",
+    "4. Training hours"
    ]
   },
   {
@@ -1856,7 +2040,7 @@
    "id": "5f1a5641",
    "metadata": {},
    "source": [
-    "### 5.5 Work Hours Per Week"
+    "#### 3.4.1 Work Hours Per Week"
    ]
   },
   {
@@ -1876,7 +2060,7 @@
    "id": "904070aa",
    "metadata": {},
    "source": [
-    "### 5.6 Overtime Hours"
+    "#### 3.4.2 Overtime Hours"
    ]
   },
   {
@@ -1896,7 +2080,7 @@
    "id": "1cf7cf79",
    "metadata": {},
    "source": [
-    "### 5.7 Sick Days"
+    "#### 3.4.3 Sick Days"
    ]
   },
   {
@@ -1916,7 +2100,7 @@
    "id": "8a71a451",
    "metadata": {},
    "source": [
-    "### 5.8 Training Hours"
+    "#### 3.4.4 Training Hours"
    ]
   },
   {
@@ -1933,72 +2117,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73373188",
+   "id": "448da36e",
    "metadata": {},
    "source": [
-    "### 5.9 Remote Work Frequency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca60e008",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c78902c5",
-   "metadata": {},
-   "source": [
-    "### 5.10 Satisfaction Scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ef52dea",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16b1339c",
-   "metadata": {},
-   "source": [
-    "## 6. EDA, Part 4 – Potential Predictors of Performance"
+    "### 3.5 Employee Satisfaction"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f388d5ec",
+   "id": "9f9580b5",
    "metadata": {},
    "source": [
-    "In this section, I will explore potential predictors of performance:\n",
-    "1. Work hours\n",
-    "2. Overtime hours\n",
-    "3. Sick days\n",
-    "\n",
-    "4. Remote work frequency\n",
-    "5. Team size\n",
-    "\n",
-    "6. Education level\n",
-    "7. Training hours\n",
-    "8. Project handled\n",
-    "9. Years at company\n",
-    "\n",
-    "9. Age\n",
-    "10. Monthly salary"
+    "In this section, I will explore the pattern of employee satisfaction."
    ]
   }
  ],
