Fix comment typo in block 259

--- a/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
+++ b/R/ibm_hr_employee_attrition/hr_employee_attrition_notebook.ipynb
@@ -2228,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "id": "d2d84b55",
    "metadata": {
     "vscode": {
@@ -2260,7 +2260,7 @@
     "  step_upsample(Attrition,\n",
     "                over_ratio = 0.75) |>\n",
     "  \n",
-    "  ### Downsample to 125% of the post-upsampled positive cass\n",
+    "  ### Downsample to 125% of the post-upsampled positive class\n",
     "  step_downsample(Attrition,\n",
     "                  under_ratio = 1.25)"
    ]
