Add retrieved date for dataset

--- a/Python/coffee_shop_daily_revenue/coffee_shop_daily_revenue_notebook.ipynb
+++ b/Python/coffee_shop_daily_revenue/coffee_shop_daily_revenue_notebook.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "**Name:** Coffee Shop Daily Revenue Prediction Dataset\n",
     "\n",
-    "**Source:** https://www.kaggle.com/datasets/himelsarder/coffee-shop-daily-revenue-prediction-dataset"
+    "**Source:** https://www.kaggle.com/datasets/himelsarder/coffee-shop-daily-revenue-prediction-dataset\n",
+    "\n",
+    "**Retrived Date:** 04 May 2025"
    ]
   },
   {
