--- a/R/avocado_price/avocado_price_notebook.ipynb
+++ b/R/avocado_price/avocado_price_notebook.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "15972976",
    "metadata": {
     "vscode": {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5f267a77",
    "metadata": {
     "vscode": {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "b692aef6",
    "metadata": {
     "vscode": {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3415cc02",
    "metadata": {
     "vscode": {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b62af7b8",
    "metadata": {
     "vscode": {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c79328a4",
    "metadata": {
     "vscode": {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "bea05a44",
    "metadata": {
     "vscode": {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f864d6af",
    "metadata": {
     "vscode": {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "02bbbed2",
    "metadata": {
     "vscode": {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a3741624",
    "metadata": {
     "vscode": {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "1a71347b",
    "metadata": {
     "vscode": {
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e9938615",
    "metadata": {
     "vscode": {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "bf90607e",
    "metadata": {
     "vscode": {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d2226562",
    "metadata": {
     "vscode": {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "809eff95",
    "metadata": {
     "vscode": {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "e4f0dcf7",
    "metadata": {
     "vscode": {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "72cb5242",
    "metadata": {
     "vscode": {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "968f97f5",
    "metadata": {
     "vscode": {
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "fd10d1aa",
    "metadata": {
     "vscode": {
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "7b430257",
    "metadata": {
     "vscode": {
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "686afe56",
    "metadata": {
     "vscode": {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "c3acc14f",
    "metadata": {
     "vscode": {
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "c98a75df",
    "metadata": {
     "vscode": {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "38f8af15",
    "metadata": {
     "vscode": {
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "65d0abfa",
    "metadata": {
     "vscode": {
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "04faa1bb",
    "metadata": {
     "vscode": {
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "2b77eda4",
    "metadata": {
     "vscode": {
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "0013082d",
    "metadata": {
     "vscode": {
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "8634d763",
    "metadata": {
     "vscode": {
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "542d900e",
    "metadata": {
     "vscode": {
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "3d320bfa",
    "metadata": {
     "vscode": {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "96b54ce8",
    "metadata": {
     "vscode": {
@@ -2015,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "0b9dc0ee",
    "metadata": {
     "vscode": {
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "5d1b3a68",
    "metadata": {
     "vscode": {
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "08ae7767",
    "metadata": {
     "vscode": {
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "89fc21bc",
    "metadata": {
     "vscode": {
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "82a143b4",
    "metadata": {
     "vscode": {
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "2c6fe45e",
    "metadata": {
     "vscode": {
@@ -2260,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "d76bc48b",
    "metadata": {
     "vscode": {
@@ -2311,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "d269f3f2",
    "metadata": {
     "vscode": {
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "34704cc7",
    "metadata": {
     "vscode": {
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "d4d2c072",
    "metadata": {
     "vscode": {
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "30f67871",
    "metadata": {
     "vscode": {
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "4c7b54d1",
    "metadata": {
     "vscode": {
@@ -2536,9 +2536,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
+   "display_name": "R 4.5.0",
    "language": "R",
-   "name": "ir"
+   "name": "ir45"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -2546,7 +2546,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
