Fix typo in "Dataset" section

--- a/R/avocado_price/avocado_price_notebook.ipynb
+++ b/R/avocado_price/avocado_price_notebook.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "**Source:** https://www.kaggle.com/datasets/neuromusic/avocado-prices?hl=en-GB\n",
     "\n",
-    "**Retrived Date:** 15 Apr 2025"
+    "**Retrieved Date:** 15 Apr 2025"
    ]
   },
   {
