--- a/Python/vehicle_dataset/vehicle_notebook.ipynb
+++ b/Python/vehicle_dataset/vehicle_notebook.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "c3804091",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "6d56ca2c",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "9  Individual       Manual   First Owner  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "7ff9965e",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "b03b1b4c",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "max        NaN         NaN          NaN          NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "919d7235",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "id": "1b17af8d",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "[763 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "id": "ac165383",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        "(4340, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "id": "718b4ab9",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
        "(3577, 8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "id": "7d1f69e2",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "cbc51225",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "id": "d43e1a2d",
    "metadata": {},
    "outputs": [
@@ -897,19 +897,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "id": "e8a0915a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function\n",
-    "def rm_outliers(col):\n",
+    "def rm_outliers(df, col):\n",
     "    \n",
     "    # Calculate Q3\n",
-    "    q3 = vehicles_cleaned[col].quantile(0.75)\n",
+    "    q3 = df[col].quantile(0.75)\n",
     "    \n",
     "    # Caulcate Q1\n",
-    "    q1 = vehicles_cleaned[col].quantile(0.25)\n",
+    "    q1 = df[col].quantile(0.25)\n",
     "    \n",
     "    # Calculate IQR\n",
     "    iqr = q3 - q1\n",
@@ -921,7 +921,57 @@
     "    lower = q1 - (iqr * 1.5)\n",
     "    \n",
     "    # Filter out outliers\n",
-    "    vehicles_cleaned = vehicles_cleaned[(vehicles_cleaned[col] < lower & vehicles_cleaned[col] > upper)]"
+    "    df_filtered = df[(df[col] >= lower) & (df[col] <= upper)]\n",
+    "    \n",
+    "    # Return df\n",
+    "    return df_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "27862003",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3577, 8)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the dimensions\n",
+    "vehicles_cleaned.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "6f853587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3407, 8)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove outliers in `selling_price`\n",
+    "vehicles_cleaned = rm_outliers(vehicles_cleaned, 'selling_price')\n",
+    "\n",
+    "# Check the dimensions\n",
+    "vehicles_cleaned.shape"
    ]
   }
  ],
